[gd_scene load_steps=12 format=3 uid="uid://cvlt8hxic0ccr"]

[ext_resource type="Script" path="res://main.gd" id="1_hftcn"]
[ext_resource type="PackedScene" uid="uid://dd0sl8i54rl55" path="res://player.tscn" id="1_kir6f"]
[ext_resource type="PackedScene" uid="uid://bdn1lhgkpdcuk" path="res://mob.tscn" id="2_lb3d2"]
[ext_resource type="FontFile" uid="uid://be6sxh0dhqo51" path="res://fonts/Montserrat-Medium.ttf" id="4_nrwc7"]
[ext_resource type="Script" path="res://ScoreLabel.gd" id="5_pwy36"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ivfid"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_o3y7v"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hhf2j"]
albedo_color = Color(0.94902, 0.270588, 0.419608, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_0o1ig"]
material = SubResource("StandardMaterial3D_hhf2j")

[sub_resource type="Curve3D" id="Curve3D_0qn6s"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -15.11, 0, -14.7334, 0, 0, 0, 0, 0, 0, 13.8834, 0, -14.8868, 0, 0, 0, 0, 0, 0, 14.1902, 0, 15.9473, 0, 0, 0, 0, 0, 0, -14.8032, 0, 15.9473, 0, 0, 0, 0, 0, 0, -15.11, 0, -14.7334),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Theme" id="Theme_fm33i"]
default_font = ExtResource("4_nrwc7")
default_font_size = 22

[node name="Main" type="Node"]
script = ExtResource("1_hftcn")
mob_scene = ExtResource("2_lb3d2")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_ivfid")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_o3y7v")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 20, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_kir6f")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 20, 20)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
projection = 1
size = 19.0
far = 100.0

[node name="Cylinders" type="Node3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, -15)
mesh = SubResource("CylinderMesh_0o1ig")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, -15)
mesh = SubResource("CylinderMesh_0o1ig")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 16)
mesh = SubResource("CylinderMesh_0o1ig")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0, 16)
mesh = SubResource("CylinderMesh_0o1ig")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_0qn6s")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(0.00529092, 0, -0.999986, 0, 1, 0, 0.999986, 0, 0.00529092, -15.11, 0, -14.7334)

[node name="MobSpawnTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fm33i")

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 23.0
offset_top = 21.0
offset_right = 84.0
offset_bottom = 47.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
script = ExtResource("5_pwy36")

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -14.0
offset_right = 20.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Press Enter to retry
"

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_mob_spawn_timer_timeout"]
